@@ -1,12 +1,31 @@
-<?esxx 
+<?esxx
 
 function handler(req) {
+  let res = <html>
+    <body>
+    <h1>Parsed request information</h1>
+    <dl>
+    <dt>Request URI</dt>
+    <dd>{req.requestURI}</dd>
+    <dt>Script URI</dt>
+    <dd>{req.scriptURI}</dd>
+    <dt>Script Name</dt>
+    <dd>{req.scriptName}</dd>
+    <dt>Path Info</dt>
+    <dd>{req.pathInfo}</dd>
+    </dl>
+    <h1>Environment variables</h1>
+    <dl/>
+    </body>
+    </html>;
+
   // Dump all environment variables
-  for (var s in req.env) {
-    req.log.info(s + ": " + req.env[s]);
+  for (let s in req.env) {
+    res.body.dl[1].* += <dt>{s}</dt>;
+    res.body.dl[1].* += <dd>{req.env[s]}</dd>;
   }
 
-  return 200;
+  return [200, {}, res, "text/html"];
 }
 
 
