@@ -15,6 +15,9 @@
 	object to automatically build proper URIs. The file URI class
 	will also refuse URIs with encoded path separators in then.
 
+	* The Request object now has requestURI, scriptURI, scriptName
+	and pathInfo properties.
+
 0.9.20080927
 	* Fixed a bug that closed System.in in script mode, causing
 	System.console() to return null.
